--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container">
         <h2>Lets Play game</h2>
         <h3><span id="playerscore1">0</span> To <span id="playscore2">0</span></h3>
-        <p> Playing to-- <span>5</span> </p>
-        <input type="text" id="inputscore"> 
+        <p> Playing to-- <span></span> </p>
+        <input type="number" id="inputscore"> 
 
       
 
-        <button type="button" id="PlayerOne">Player 1</button>
-        <button type="button" id="PlayerTw">Player 2</button>
-        <button type="button" id="reset">Reset</button>
+        <button type="button" class="btn-success" id="PlayerOne">Player 1</button>
+        <button type="button" class="btn-success" id="PlayerTw">Player 2</button>
+        <button type="button" class="btn-info" id="reset">Reset</button>
   
     </div>
     
